// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deletePage 1`] = `
Array [
  Object {
    "pathname": "/",
    "scroll": 30,
  },
  Object {
    "pathname": "/list",
    "scroll": 80,
  },
]
`;

exports[`deletePage 2`] = `
Array [
  Object {
    "pathname": "/list",
    "scroll": 80,
  },
  Object {
    "pathname": "/detail",
    "scroll": 0,
  },
]
`;
